--- a/c/linux/userland/net/poll/Makefile
+++ b/c/linux/userland/net/poll/Makefile
@@ -1,6 +1,7 @@
-objects = poll_server.o
-poll: $(objects)
-	gcc -o poll $(objects)
+poll: poll_server.o
+	gcc -o poll poll_server.c
+poll_server.o: poll_server.c
+	gcc -g -c poll_server.c
 
 clean:
 	rm -f poll *.o
