--- a/c/linux/userland/openssl/rsa/Makefile
+++ b/c/linux/userland/openssl/rsa/Makefile
@@ -1,6 +1,6 @@
 all:
 	gcc -g -o rsa_test rsa_test.c -I/tmp/tmp.openssl/include -L. -lcrypto
 
-.PHONY clean
+.PHONY: clean
 clean:
 	rm -rf rsa_test
